# WebMsh

./: AZURE_CHEAP_DEPLOYMENT.md  AZURE_POSTGRES_DEPLOYMENT.md  AZURE_POSTGRES_DEPLOYMENT_tmp.html  BL.EN.CSE23053_Shravan_Sathiyanarayanan.md  BL.EN.U4CSE23008_Dhimant_Kulkarni.md  BL.EN.U4CSE23035_Noel_Tom.md  BL.EN.U4CSE23070_Irfanul_Haque_Raque.md  BL.EN.U4CSE23070_Irfanul_Haque_Raque.xlsx  CONTEXT_FOR_LLM.md  Detailed_Scrum_4_Weeks_Daily_Log.xlsx  Dockerfile  PLAN.md  SRS.md  compose.yaml  latestUpdatedAsof18thMay.md  package-lock.json  pytest.ini  railway.toml  webmsh-containerapp.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_route.py
backend/app/: assistant.py  auth.py  db.py  main.py  mesh_service.py  project_models.py  project_service.py  projects.py
docs/: SRSmerged1-2-3-and4.md  SRSmerged1-3-and4.md  activity-all.md  activity-auth.md  activity-mesh-export.md  activity-physical.md  activity-project.md  activity-undo.md  activity.md  chapter2_irfanul_journal.md  class.md  diagrams.md  webmsh-auth-wireframe.html  webmsh-lowfi-wireframe.html  webmsh-product-vision-board.html  webmsh-user-profile-wireframe.html
frontend/: index.html  orig_HomePage.css  package-lock.json  package.json  playwright.config.ts  refactor_profile.cjs  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  AuthPage.jsx  ProfilePage.jsx  Workspace.jsx  (+2 more)
samplefiles/: cylinder.vtk  dec.vtk  inspect_mesh.py  s13-15.stp
scripts/: deploy-azure-cheap.ps1
tests/: conftest.py  requirements-test.txt
(+69 files in other folders)
