[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "gmsh==4.13.1",
    "httpx>=0.28.1,<0.29",
    "pathlib>=1.0.1",
    "psycopg[binary]>=3.2.3,<4",
    "pydantic>=2.9.2,<2.11",
    "pytest>=8.3.4,<9",
    "python-multipart>=0.0.19,<0.1",
    "uvicorn[standard]>=0.32.1,<0.33",
]
